# filter-email

./: README.md  pyproject.toml
filter_email/: model.ipynb
filter_email/utils/: _validation.py  config.json
